# LibreSplit

./: .gitignore  CONTRIBUTING.md  Doxyfile  README.md  meson.build  meson.options
.github/workflows/: build.yml  check.yml  format.yml
assets/: appimage.sh  com.github.wins1ey.libresplit.gschema.xml  default_settings.json
docs/: auto-splitter-tips.md  auto-splitters.md  plugins.md  settings-keybinds.md  split-files.md  themes.md  troubleshooting.md
include/: shared.h  timer.h
include/gui/: app_window.h  context_menu.h  dialogs.h  game.h  settings_dialog.h  theming.h  timer.h  welcome_box.h
include/gui/component/: components.h
include/keybinds/: delayed_callbacks.h  delayed_handlers.h  keybinds_callbacks.h
include/lasr/: auto-splitter.h  functions.h
include/lasr/functions/: getBaseAddress.h  getMaps.h  process.h  shallow_copy_tbl.h  signature.h  sizeOf.h
include/lasr/maps/: maps.h
include/lasr/memory_iter/: memory_iterator.h
include/plugins/: plugin.h  plugin_loading.h  plugin_utils.h
include/settings/: definitions.h  settings.h
plugins/: README.md
plugins/md5/: Makefile  md5.c
plugins/test_plugin/: Makefile  test_plugin.c
plugins/test_plugin2/: Makefile  test_plugin.c
plugins/test_plugin3/: Makefile  test_plugin.c
plugins/therun/: Makefile  therun.c  therun.h
src/: auto-splitter.c  auto-splitter.h  bind.c  config.h.in  ctl.c  keybinds.c  keybinds.h  libsigscan.c  libsigscan.h  logging.c  logging.h  lua_utils.c  lua_utils.h  main.c  memory.c  memory.h  opts.h  process.c  process.h  props.h  server.c  server.h  settings.c  settings.h  shared.c  shared.h  signature.c  signature.h  timer.c  timer.h
src/component/: best-sum.c  clock.c  detailed-timer.c  pb.c  prev-segment.c  splits.c  wr.c
src/gui/: actions.c  actions.h  app_window.c  app_window.h  context_menu.c  context_menu.h  dialogs.c  dialogs.h  game.c  game.h  help_dialog.c  help_dialog.h  settings_dialog.c  settings_dialog.h  theming.c  theming.h  timer.c  timer.h  utils.c  utils.h  welcome_box.c  welcome_box.h
src/gui/component/: best-sum.c  clock.c  comparison.c  components.c  components.h  detailed-timer.c  pb.c  prev-segment.c  splits.c  title.c  wr.c
src/keybinds/: bind.c  delayed_handlers.c  delayed_handlers.h  keybinds.c  keybinds.h  keybinds_callbacks.c  keybinds_callbacks.h
src/lasr/: auto-splitter.c  auto-splitter.h  functions.h  utils.c  utils.h
src/lasr/functions/: bitwise.c  bitwise.h  getBaseAddress.c  getMaps.c  getMaps.h  getModuleSize.c  getModuleSize.h  getPID.c  getPID.h  md5.c  md5.h  print_tbl.c  print_tbl.h  process.c  readAddress.c  readAddress.h  shallow_copy_tbl.c  signature.c  signature.h  sizeOf.c  strtoida.c  watcher.c  watcher.h
src/lasr/maps/: maps.c  maps.h
src/lasr/memory_iter/: memory_iterator.c  memory_iterator.h
src/lua/: utils.lua
src/plugins/: plugin.h  plugin_loading.c  plugin_loading.h  plugin_utils.c  plugin_utils.h
src/settings/: definitions.c  definitions.h  settings.c  settings.h  utils.c  utils.h
